--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "deploy": "yarn build & node setup.js",
+    "deploy": "yarn build & node utils/setupService.js",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"*.js\"",
@@ -27,6 +27,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "moment": "^2.29.1",
     "node-windows": "^1.0.0-beta.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
