--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "deploy": "forever start ./utils/deployment.json",
+    "deploy": "forever start --minUptime 100000 --spinSleepTime 100000 ./utils/deployment.json",
     "stop": "forever stop localserver",
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -28,6 +28,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.0.1",
+    "axios": "^0.27.2",
     "moment": "^2.29.1",
     "node-windows": "^1.0.0-beta.6",
     "reflect-metadata": "^0.1.13",
@@ -38,6 +40,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.7",
     "@nestjs/testing": "^8.0.0",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
